test_case/rust-lang_rust/35946_253232313.rs
 rust
fn foo<T: Carrier>() { .. .}
foo::<()>() // error
